@@ -1,5 +1,11 @@
 2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[grok] Fix bug: Check that branches begin w/ branch point.
+
+	* Makefile.am (XFAIL): Remove t300.
+
+2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[v] Add testcase to "invalid RCS file" test; mark xfail.
 
 	* t300 (zot): New func.
