@@ -1,3 +1,10 @@
+2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[grok] Fix bug: Check that branches begin w/ branch point.
+
+	* b-grok.c (full <revisions>): Check that
+	branches begin with the branch point revision.
+
 2010-11-19  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Fix bug: For unchanged checkin on branch, prune ‘newdelta’.
